Crash in [@ mozilla::widget::WlLogHandler]: "zwp_linux_dmabuf_feedback_v1@62 still attached"
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox-esr115 | --- | unaffected |
firefox115 | --- | unaffected |
firefox116 | --- | unaffected |
firefox117 | + | fixed |
People
(Reporter: RyanVM, Assigned: rmader)
References
(Blocks 1 open bug)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/b5db565c-1d2e-414b-b936-b8bb80230720
MOZ_CRASH Reason: zwp_linux_dmabuf_feedback_v1@62 still attached
Top 10 frames of crashing thread:
0 libxul.so MOZ_Crash mfbt/Assertions.h:281
0 libxul.so mozilla::widget::WlLogHandler widget/gtk/nsWaylandDisplay.cpp:173
1 libwayland-client.so.0 wl_log /usr/src/debug/wayland/wayland-1.22.0/src/wayland-util.c:449
2 libwayland-client.so.0 wl_event_queue_release /usr/src/debug/wayland/wayland-1.22.0/src/wayland-client.c:315
3 libwayland-client.so.0 wl_event_queue_destroy /usr/src/debug/wayland/wayland-1.22.0/src/wayland-client.c:352
4 libnvidia-egl-wayland.so.1 terminateDisplay /usr/src/debug/egl-wayland/egl-wayland/src/wayland-egldisplay.c:640
5 libnvidia-egl-wayland.so.1 wlEglTerminateHook /usr/src/debug/egl-wayland/egl-wayland/src/wayland-egldisplay.c:664
6 libEGL_nvidia.so.0 NvEglwlaf47906in
7 libEGL_nvidia.so.0 NvEglwlaf47906in
8 libxul.so mozilla::gl::GLLibraryEGL::fTerminate const gfx/gl/GLLibraryEGL.h:254
Updated•2 years ago
|
I wonder if that's a variant of 'warning: queue %p destroyed while proxies still attached' but we fail to filter that:
https://cgit.freebsd.org/ports/commit/?id=0ab18b0ed7e606feb41a548fc95c80f5eb63d6e9
Looks like so:
|[0][GFX1-]: Wayland protocol error: warning: queue 7fe91a1fb760 destroyed while proxies still attached:
(t=11.1469) |[1][GFX1-]: Wayland protocol error: zwp_linux_dmabuf_feedback_v1@62 still attached
(t=11.1469)
So we're getting the message twice now with info which proxy is attached. Nice :D
Assignee | ||
Comment 4•2 years ago
|
||
(In reply to Martin Stránský [:stransky] (ni? me) from comment #1)
I wonder if that's a variant of 'warning: queue %p destroyed while proxies still attached' but we fail to filter that:
https://cgit.freebsd.org/ports/commit/?id=0ab18b0ed7e606feb41a548fc95c80f5eb63d6e9
Gosh, haven't seen this yet - but yes, it's a variant. Let's add still attached
to the filter I'd say.
Assignee | ||
Comment 5•2 years ago
•
|
||
Ah I see, it's only happening on prop. Nvidia and the version in question, unlike Mesa, hasn't been fixed yet.
Assignee | ||
Comment 6•2 years ago
|
||
All variants of "still attached" errors are an exception for Wayland
errors: they are not produced by compositors but libwayland, are
non-fatal and get triggered by drivers (and thus outside of our
control). Thus silence all of them, it's unlikely that a real error will
contain this string.
Updated•2 years ago
|
Comment 7•2 years ago
|
||
Tracking for 117 given the high volume of crashes
Comment 9•2 years ago
|
||
bugherder |
Reporter | ||
Updated•2 years ago
|
Description
•