Bug 1844653 - Ignore all 'still attached' Wayland errors, r=emilio

All variants of "still attached" errors are an exception for Wayland
errors: they are not produced by compositors but libwayland, are
non-fatal and get triggered by drivers (and thus outside of our
control). Thus silence all of them, it's unlikely that a real error will
contain this string.

Differential Revision: https://phabricator.services.mozilla.com/D184194