widget/gtk/nsWaylandDisplay.cpp
@@ -162,11 +162,12 @@ static void WlLogHandler(const char* format, va_list args) {
   VsprintfLiteral(error, format, args);
   gfxCriticalNote << "Wayland protocol error: " << error;
 
-  // See Bug 1826583 for reference.
-  // "warning: queue %p destroyed while proxies still attached" is non-fatal
-  // warning and we don't want to crash because of it.
-  if (strstr(error, "warning:") &&
-      strstr(error, "destroyed while proxies still attached")) {
+  // See Bug 1826583 and Bug 1844653 for reference.
+  // "warning: queue %p destroyed while proxies still attached" and variants
+  // like "zwp_linux_dmabuf_feedback_v1@%d still attached" are exceptions on
+  // Wayland and non-fatal. They are triggered in certain versions of Mesa or
+  // the proprietary Nvidia driver and we don't want to crash because of them.
+  if (strstr(error, "still attached")) {
     return;
   }
 
